<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_splash"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".activity.SplashActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            >
            <ImageView
                android:layout_width="0dp"
                android:layout_height="100dp"
                android:src="@drawable/ic_app_icon"
                android:layout_weight="0.7"
                android:padding="@dimen/layout_margin_10"
                />
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="2.3"
                >
                <TextView
                    android:id="@+id/textViewCityName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:text="@string/app_name"
                    android:layout_marginTop="10dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textColor="#3F51B5"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/loogedinuser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="@color/colorBlack"
                    android:textStyle="bold"/>
            </LinearLayout>

        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/logout"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/logout"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/birthdaytxt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/birthday"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/qctxt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/qcapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/mqctxt"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/mqcapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/iconnect"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/iconnapp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/round1"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/round1"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/round2"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/round2"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/round3"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/round3"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/clientcall"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/clientcall"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:orientation="vertical"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            app:cardCornerRadius="@dimen/_6dp"
            app:cardElevation="@dimen/_4dp"
            >
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:id="@+id/imageupload"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:text="@string/imageupload"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                />

        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/powerdby"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:text="@string/powerdby"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textAppearance="?android:attr/textAppearance"
            android:textColor="@color/colorLightRed"
            android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
